<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_hola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="8dp"
        android:text="@string/hola_provinciaActivity"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_eligeprovincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/eligeprovincia_provinciaActivity"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hola" />

    <RadioGroup
        android:id="@+id/radioGroup_provincias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_eligeprovincia">

        <RadioButton
            android:id="@+id/radioButton_almeria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/almeria_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_cadiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/cadiz_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_cordoba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/cordoba_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_granada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/huelva_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_huelva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/huelva_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_jaen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/jaen_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_malaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/malaga_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_sevilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sevilla_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/fp_provinciaActivity"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_profesorado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/profesorado_provinciaActivity"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btnsiguiente_provinciaActivity"
        app:icon="@drawable/siguiente"
        app:iconGravity="textEnd"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btncreditos_provinciaActivity"
        app:icon="@drawable/creditos"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
